test_suite5/ALAN/test_suite/alan-2022-examples/failing/003400_mutation.alan
source s653a begin if 94 then relax elsif 5 < then relax end end
